syntax = "proto3";

package TwoProcessConnector;

message TestResponse {
  string test_response = 1;
}

message TestRequest {
  string test_message = 1;
}

message ShutdownResponse {
  string status = 1;
}

message ShutdownRequest {
  string options = 1;
}

service Reader {
  rpc sww(TestRequest) returns (stream TestResponse) {}
  rpc shutdown(ShutdownRequest) returns (ShutdownResponse);
  // rpc serverStreamingCall(ClientMessage) returns (stream ServerMessage) {}
  // rpc clientStreamingCall(stream ClientMessage) returns (ServerMessage) {}
  // rpc bidirectionalStreamingCall(stream ClientMessage) returns (stream ServerMessage) {}
}
